#997424 by dereine: Use drupal_add_library instead of drupal_add_js where it's possible.
#992704 by solotandem, bojanz, dereine: support to groupby entity_id.
#970514 by moshe, dereine: Provide basic drush integration for views.
#1015306 by dereine: Fix index in field_field.
by solotandem: Make a better description for the group_type field in groupby form.
#1015856 by solotandem: Eliminate PHP notices related to recent groupby changes.
#1016058 by dereine: Fix string contain all words.
#940316 by merlinofchaos: Allow to rescan template files from non-current themes.
by mikejoconnor, dereine: Fix notice for exporting view->core.
#1002744 by bojanz: Use entity_load for fieldapi field handlers.
#957206 by dereine: Add missing views.info entry for aggregator iid argument handler.
#1002744 by bojanz: Refactor views_field_field by renaming some variables/comments.
by dereine: Bring vpr and views_debug back.
#955464 by dereine: Fix glossary and many to one mode handler.
#1016430 by bojanz: fix two small bugs in field_field handler.
by dereine: Add $view->version to all default views.
#1006176 by das-peter, bojanz: Add support for field based translation.
#1023062 by mikejoconnor: Replace views_process_dependency with ctools_dependent_process again.
#1023558 by mariusz.slonina: Add a user cancel account link.
#1015960 by duellj: View js should use DOM element not jquery object.
#1027552 by david_Rothstein: Fix Node: Has new content fatal error.
#955464 by dereine: Fix many_to_one helper in the case of have no condition and operator = 'and'.
#696550: Taxonomy validator should always set title when it successfully validates.
#869172 by bendiy: Add an "external" parameter to field link rewriting so that external URLs can be formed properly even without a scheme.
#935176 by benoit.borrel: Add "system" table to Views data.
#839236: Fields named "buttons" would disappear from the rearrange UI due to conflict with the buttons on the form.