@@ -302,3 +302,4 @@ by dereine: Add $view->version to all default views.
 #869172 by bendiy: Add an "external" parameter to field link rewriting so that external URLs can be formed properly even without a scheme.
 #935176 by benoit.borrel: Add "system" table to Views data.
 #839236: Fields named "buttons" would disappear from the rearrange UI due to conflict with the buttons on the form.
+#783514 by dereine: Allow breaking of strings with + and ,
